fixed and updated rows to change color

--- a/index.html
+++ b/index.html
@@ -31,53 +31,44 @@
     <div class="container">
       <!-- Timeblocks go here -->
 
-        <div id="09" class="row-2">9AM</div>
-        <div class="col-md-1 hour"></div>
-        <textarea class="time-block description col-md-10"></textarea>
-        <button class="col-md-1 saveBtn"><i class="fas fa-save fa-2x"></i></button>
+        <div class="col-md-1 time-block hour">9AM</div>
+        <textarea id="09" class="row-2 description col-md-10"></textarea>
+        <button class="col-md-1 saveBtn" onclick="saveData()"><i class="fas fa-save fa-2x"></i></button>
         
-        <div id="10" class="row-2">10AM</div>
-        <div class="col-md-1 hour"></div>
-        <textarea class="time-block description col-md-10"></textarea>
-        <button class="col-md-1 saveBtn"><i class="fas fa-save fa-2x"></i></button>
+        <div class="col-md-1 time-block hour">10AM</div>
+        <textarea id="10" class="row-2 description col-md-10"></textarea>
+        <button class="col-md-1 saveBtn" onclick="saveData()"><i class="fas fa-save fa-2x"></i></button>
 
-        <div id="11" class="row-2">11AM</div>
-        <div class="col-md-1 hour"></div>
-        <textarea class="time-block description col-md-10"></textarea>
-        <button class="col-md-1 saveBtn"><i class="fas fa-save fa-2x"></i></button>
+        <div class="col-md-1 time-block hour">11AM</div>
+        <textarea id="11" class="row-2 description col-md-10"></textarea>
+        <button class="col-md-1 saveBtn" onclick="saveData()"><i class="fas fa-save fa-2x"></i></button>
 
-        <div id="12" class="row-2">12PM</div>
-        <div class="col-md-1 hour"></div>
-        <textarea class="time-block description col-md-10"></textarea>
-        <button class="col-md-1 saveBtn"><i class="fas fa-save fa-2x"></i></button>
+        <div class="col-md-1 time-block hour">12PM</div>
+        <textarea id="12" class="row-2 description col-md-10"></textarea>
+        <button class="col-md-1 saveBtn" onclick="saveData()"><i class="fas fa-save fa-2x"></i></button>
 
-        <div id="13" class="row-2">1PM</div>
-        <div class="col-md-1 hour"></div>
-        <textarea class="time-block description col-md-10"></textarea>
-        <button class="col-md-1 saveBtn"><i class="fas fa-save fa-2x"></i></button>
+        <div class="col-md-1 time-block hour">1PM</div>
+        <textarea id="13" class="row-2 description col-md-10"></textarea>
+        <button class="col-md-1 saveBtn" onclick="saveData()"><i class="fas fa-save fa-2x"></i></button>
 
-        <div id="14" class="row-2">2PM</div>
-        <div class="col-md-1 hour"></div>
-        <textarea class="time-block description col-md-10"></textarea>
-        <button class="col-md-1 saveBtn"><i class="fas fa-save fa-2x"></i></button>
+        <div class="col-md-1 time-block hour">2PM</div>
+        <textarea id="14" class="row-2 description col-md-10"></textarea>
+        <button class="col-md-1 saveBtn" onclick="saveData()"><i class="fas fa-save fa-2x"></i></button>
 
 
-        <div id="15" class="row-2">3PM</div>
-        <div class="col-md-1 hour"></div>
-        <textarea class="time-block description col-md-10"></textarea>
-        <button class="col-md-1 saveBtn"><i class="fas fa-save fa-2x"></i></button>
+        <div class="col-md-1 time-block hour">3PM</div>
+        <textarea id="15" class="row-2 description col-md-10"></textarea>
+        <button class="col-md-1 saveBtn" onclick="saveData()"><i class="fas fa-save fa-2x"></i></button>
 
 
-        <div id="16" class="row-2">4PM</div>
-        <div class="col-md-1 hour"></div>
-        <textarea class="time-block description col-md-10"></textarea>
-        <button class="col-md-1 saveBtn"><i class="fas fa-save fa-2x"></i></button>
+        <div class="col-md-1 time-block hour">4PM</div>
+        <textarea id="16" class="row-2 description col-md-10"></textarea>
+        <button class="col-md-1 saveBtn" onclick="saveData()"><i class="fas fa-save fa-2x"></i></button>
 
 
-        <div id="17" class="row-2">5PM</div>
-        <div class="col-md-1 hour"></div>
-        <textarea class="time-block description col-md-10"></textarea>
-        <button class="col-md-1 saveBtn"><i class="fas fa-save fa-2x"></i></button>
+        <div class="col-md-1 time-block hour">5PM</div>
+        <textarea id="17" class="row-2 description col-md-10"></textarea>
+        <button class="col-md-1 saveBtn" onclick="saveData()"><i class="fas fa-save fa-2x"></i></button>
 
         
     </div>
