--- a/index.html
+++ b/index.html
@@ -33,42 +33,42 @@
 
         <div class="col-md-1 time-block hour">9AM</div>
         <textarea id="09" class="row-2 description col-md-10"></textarea>
-        <button class="col-md-1 saveBtn" onclick="saveData()"><i class="fas fa-save fa-2x"></i></button>
+        <button class="col-md-1 saveBtn"><i class="fas fa-save fa-2x"></i></button>
         
         <div class="col-md-1 time-block hour">10AM</div>
         <textarea id="10" class="row-2 description col-md-10"></textarea>
-        <button class="col-md-1 saveBtn" onclick="saveData()"><i class="fas fa-save fa-2x"></i></button>
+        <button class="col-md-1 saveBtn"><i class="fas fa-save fa-2x"></i></button>
 
         <div class="col-md-1 time-block hour">11AM</div>
         <textarea id="11" class="row-2 description col-md-10"></textarea>
-        <button class="col-md-1 saveBtn" onclick="saveData()"><i class="fas fa-save fa-2x"></i></button>
+        <button class="col-md-1 saveBtn"><i class="fas fa-save fa-2x"></i></button>
 
         <div class="col-md-1 time-block hour">12PM</div>
         <textarea id="12" class="row-2 description col-md-10"></textarea>
-        <button class="col-md-1 saveBtn" onclick="saveData()"><i class="fas fa-save fa-2x"></i></button>
+        <button class="col-md-1 saveBtn"><i class="fas fa-save fa-2x"></i></button>
 
         <div class="col-md-1 time-block hour">1PM</div>
         <textarea id="13" class="row-2 description col-md-10"></textarea>
-        <button class="col-md-1 saveBtn" onclick="saveData()"><i class="fas fa-save fa-2x"></i></button>
+        <button class="col-md-1 saveBtn"><i class="fas fa-save fa-2x"></i></button>
 
         <div class="col-md-1 time-block hour">2PM</div>
         <textarea id="14" class="row-2 description col-md-10"></textarea>
-        <button class="col-md-1 saveBtn" onclick="saveData()"><i class="fas fa-save fa-2x"></i></button>
+        <button class="col-md-1 saveBtn"><i class="fas fa-save fa-2x"></i></button>
 
 
         <div class="col-md-1 time-block hour">3PM</div>
         <textarea id="15" class="row-2 description col-md-10"></textarea>
-        <button class="col-md-1 saveBtn" onclick="saveData()"><i class="fas fa-save fa-2x"></i></button>
+        <button class="col-md-1 saveBtn"><i class="fas fa-save fa-2x"></i></button>
 
 
         <div class="col-md-1 time-block hour">4PM</div>
         <textarea id="16" class="row-2 description col-md-10"></textarea>
-        <button class="col-md-1 saveBtn" onclick="saveData()"><i class="fas fa-save fa-2x"></i></button>
+        <button class="col-md-1 saveBtn"><i class="fas fa-save fa-2x"></i></button>
 
 
         <div class="col-md-1 time-block hour">5PM</div>
         <textarea id="17" class="row-2 description col-md-10"></textarea>
-        <button class="col-md-1 saveBtn" onclick="saveData()"><i class="fas fa-save fa-2x"></i></button>
+        <button class="col-md-1 saveBtn"><i class="fas fa-save fa-2x"></i></button>
 
         
     </div>
